# moltis

./: CHANGELOG.md  Cargo.toml  README.md  fly.toml  render.yaml
.do/: deploy.template.yaml
crates/channels/: Cargo.toml
crates/channels/src/: lib.rs  otp.rs  plugin.rs
crates/cli/: Cargo.toml
crates/config/src/: schema.rs  validate.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth_routes.rs  channel.rs  channel_events.rs  chat.rs  server.rs  services.rs
crates/gateway/src/assets/: index.html
crates/gateway/src/assets/css/: chat.css  mobile.css
crates/gateway/src/assets/js/: helpers.js  message-voice.js  onboarding-view.js  page-channels.js
crates/gateway/ui/e2e/specs/: settings-nav.spec.js
crates/slack/: Cargo.toml
crates/slack/src/: access.rs  config.rs  handlers.rs  lib.rs  markdown.rs  outbound.rs  plugin.rs  socket.rs  state.rs
crates/slack/tests/: integration.rs
crates/telegram/src/: otp.rs
crates/tools/src/: browser.rs
crates/web/src/assets/js/: page-channels.js
crates/web/src/templates/: index.html
docs/src/: SUMMARY.md
website/: releases.json
